# cash_flow

./: README.md  cash_flow.json  pyproject.toml
cash_flow/: admin.py  filters.py  models.py  services.py  urls.py  views.py
cash_flow/migrations/: 0001_initial.py  0002_alter_category_name_alter_transaction_comment.py
cash_flow/templates/cash_flow/: base.html  category_confirm_delete.html  category_form.html  category_list.html  operation_type_list.html  operationtype_confirm_delete.html  operationtype_form.html  references.html  status_confirm_delete.html  status_form.html  status_list.html  subcategory_confirm_delete.html  subcategory_form.html  subcategory_list.html  transaction_confirm_delete.html  transaction_form.html  transaction_list.html
config/: settings.py  urls.py
